# interview-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-09-xiaohongshu-backend-interview-agent.md
docs/superpowers/specs/: 2026-04-09-xiaohongshu-backend-interview-agent-design.md
src/xhs_agent/: cli.py  config.py  models.py  runner.py  state.py
src/xhs_agent/crawl/: browser.py  candidate_filter.py  html_extract.py
src/xhs_agent/extract/: line_questions.py
src/xhs_agent/llm/: client.py  prompts.py
src/xhs_agent/nodes/: answer_node.py  classify_node.py  crawl_node.py  extract_node.py  question_select_node.py  report_node.py
src/xhs_agent/ocr/: image_ocr.py
src/xhs_agent/orchestration/: orchestrator.py
src/xhs_agent/process/: dedupe.py  enricher.py  stats.py
src/xhs_agent/report/: feishu.py  render.py
src/xhs_agent/storage/: db.py  repository.py
tests/: test_candidate_filter.py  test_config.py  test_enricher.py  test_html_extract.py  test_image_ocr.py  test_line_questions.py  test_report_render.py  test_repository_and_stats.py  test_runner.py
