[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xhs-agent"
version = "0.1.0"
description = "Daily Xiaohongshu interview report agent"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.25",
  "openai>=1.0",
  "playwright>=1.48",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dateutil>=2.8",
  "rapidocr-onnxruntime>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
